@@ -1,0 +1,12 @@
+Hello <%= @recipient.first_name %>,<br />
+<br />
+<%= @sticky.owner.name %> completed the following Sticky <%= link_to @sticky.name, "#{SITE_URL}/stickies/#{@sticky.id}" %> on Project <%= link_to @sticky.project.name, "#{SITE_URL}/projects/#{@sticky.project.id}" %>.<br />
+<br />
+<em><%= @sticky.description %></em>
+<br />
+<br />
+Thank you!<br />
+<br />
+<%= DEFAULT_APP_NAME %> System Mailer<br />
+<br />
+<%= @footer_html %>
